apps/monitor/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
spec:
  containers:
    - name: myapp
      image: alpine/curl
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      command:
        - sleep
        - 1d
