apps/monitor/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`playground.hefler.dev`) && Path(`/metrics`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      priority: 10
      services:
        - kind: Service
          name: prometheus
          namespace: default
          passHostHeader: true
          port: 80
